contrib/oauth2-proxy/requestauthentication.kubernetes.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  generation: 1
  name: kubernetes
  namespace: istio-system
spec:
  jwtRules:
  - forwardOriginalToken: true
    # issuer: https://kubernetes.default.svc.cluster.local
    issuer: https://oidc.eks.eu-central-1.amazonaws.com/id/8E574425478FFFA048D9BAA12C3ABBCD
