contrib/oauth2-proxy/authorizationpolicy.audience-oauth2-proxy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: audience-oauth2-proxy
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  rules:
    - {}
